tests/ui/auto-traits/typeck-default-trait-impl-precedence.stderr
error[E0277]: the trait bound `&'static u32: Defaulted` is not satisfied
  --> $DIR/typeck-default-trait-impl-precedence.rs:19:20
   |
LL |     is_defaulted::<&'static u32>();
   |                    ^^^^^^^^^^^^ the trait `Signed` is not implemented for `u32`
   |
note: required for `&'static u32` to implement `Defaulted`
  --> $DIR/typeck-default-trait-impl-precedence.rs:10:19
   |
LL | impl<'a,T:Signed> Defaulted for &'a T { }
   |           ------  ^^^^^^^^^     ^^^^^
   |           |
   |           unsatisfied trait bound introduced here
note: required by a bound in `is_defaulted`
  --> $DIR/typeck-default-trait-impl-precedence.rs:12:19
   |
LL | fn is_defaulted<T:Defaulted>() { }
   |                   ^^^^^^^^^ required by this bound in `is_defaulted`
help: consider removing the leading `&`-reference
   |
LL -     is_defaulted::<&'static u32>();
LL +     is_defaulted::<u32>();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
